--- a/compose.dev.yaml
+++ b/compose.dev.yaml
@@ -3,6 +3,8 @@ services:
         build:
             target: frankenphp_dev
         volumes:
+            - bundles:/app/public/bundles
+            - node_modules:/app/node_modules
             - var:/app/var
             - vendor:/app/vendor
             - ./config/docker/cron:/etc/cron.d/app
@@ -13,15 +15,17 @@ services:
         environment:
             CADDY_GLOBAL_OPTIONS: debug
             DATABASE_URL: mysql://${MARIADB_USER:-app}:${MARIADB_PASSWORD:-!ChangeMe!}@db:3306/${MARIADB_DATABASE:-app}?charset=${MARIADB_CHARSET:-utf8}
-            TZ: ${TZ:-UTC}
 
     mailpit:
         container_name: ${COMPOSE_PROJECT_NAME}-mailpit
-        image: axllent/mailpit
+        image: axllent/mailpit:latest
         environment:
-            MP_SMTP_AUTH_ACCEPT_ANY: 1
-            MP_SMTP_AUTH_ALLOW_INSECURE: 1
+            MP_SMTP_AUTH_ACCEPT_ANY: true
+            MP_SMTP_AUTH_ALLOW_INSECURE: true
+        restart: unless-stopped
 
 volumes:
+    bundles:
+    node_modules:
     var:
     vendor:
