--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -1,9 +1,14 @@
 services:
     frankenphp:
         env_file:
-            - path: .env.prod.local
-              required: false
+            -
+                path: .env.prod
+                required: false
         ports:
             - 80:80
             - 443:443
             - 443:443/udp
+
+    phpmyadmin:
+        ports:
+            - 8080:8080
