--- a/composer.json
+++ b/composer.json
@@ -9,20 +9,52 @@
         "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "maennchen/zipstream-php": "^3.1",
+        "phpdocumentor/reflection-docblock": "^5.4",
+        "runtime/frankenphp-symfony": "^0.2.0",
         "symfony/console": "7.1.*",
         "symfony/dotenv": "7.1.*",
         "symfony/flex": "^2",
+        "symfony/form": "7.1.*",
         "symfony/framework-bundle": "7.1.*",
+        "symfony/monolog-bundle": "^3.0",
         "symfony/runtime": "7.1.*",
-        "symfony/yaml": "7.1.*"
+        "symfony/stimulus-bundle": "^2.19",
+        "symfony/translation": "^7.1",
+        "symfony/twig-bundle": "7.1.*",
+        "symfony/ux-live-component": "^2.19",
+        "symfony/ux-twig-component": "^2.19",
+        "symfony/validator": "7.1.*",
+        "symfony/webpack-encore-bundle": "^2.1",
+        "symfony/yaml": "7.1.*",
+        "symfonycasts/dynamic-forms": "^0.1.2",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/html-extra": "^3.12",
+        "twig/intl-extra": "^3.12",
+        "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "phpstan/extension-installer": "^1.4",
+        "phpstan/phpstan": "^1.12",
+        "phpstan/phpstan-deprecation-rules": "^1.2",
+        "phpstan/phpstan-doctrine": "^1.5",
+        "phpstan/phpstan-symfony": "^1.4",
+        "phpunit/phpunit": "^9.5",
+        "squizlabs/php_codesniffer": "^3.10",
+        "symfony/browser-kit": "7.1.*",
+        "symfony/css-selector": "7.1.*",
+        "symfony/debug-bundle": "7.1.*",
+        "symfony/maker-bundle": "^1.61",
+        "symfony/phpunit-bridge": "^7.1",
+        "symfony/stopwatch": "7.1.*",
+        "symfony/web-profiler-bundle": "7.1.*"
     },
     "config": {
         "allow-plugins": {
             "php-http/discovery": true,
             "symfony/flex": true,
-            "symfony/runtime": true
+            "symfony/runtime": true,
+            "phpstan/extension-installer": true
         },
         "sort-packages": true
     },
